--- a/box_and_box_floor.html
+++ b/box_and_box_floor.html
@@ -66,35 +66,34 @@
         }
         //objects
         let flGeo= new THREE.BoxGeometry(200,1,100);
-        let flMat= new THREE.MeshPhongMaterial({color: 0xFF0000});
-        let sphereGeo= new THREE.SphereGeometry(10);
-        let sphereMat= new THREE.MeshPhongMaterial({color: 0x0000FF});
-        let sphereMat2= new THREE.MeshPhongMaterial({color: 0x00FF00});
+        let flMat= new THREE.MeshPhongMaterial({color: 0xFF0000, wireframe: true});
+        let boxGeo= new THREE.BoxGeometry(20,20,20);
+        let boxMat= new THREE.MeshPhongMaterial({color: 0x0000FF, wireframe: true});
 
         const light= new THREE.PointLight(0xFFFFFF,1);
         const helplight= new THREE.PointLightHelper(light);
 
         //Scene
         const threeFizWorld = new ThreeFiz(scene)
-        let ilosc = 10
-        for(let i = 0; i< ilosc/2; i++){
-            threeFizWorld.addSphere(new THREE.Mesh(sphereGeo,sphereMat), 10, 20)
-            threeFizWorld.addSphere(new THREE.Mesh(sphereGeo,sphereMat2), 10, 20)
+        let ilosc = 1
+        for(let i = 0; i< ilosc; i++){
+            threeFizWorld.addBox(new THREE.Mesh(boxGeo,boxMat), 10)
         }
         // load('./models/bowl.glb')
         // load('./models/collision-world.glb')
         threeFizWorld.addBox(new THREE.Mesh(flGeo,flMat), 10)
-        threeFizWorld.setWorld(threeFizWorld.boxes[0])
+        threeFizWorld.setWorld(threeFizWorld.boxes[1])
         threeFizWorld.init()
 
-        // threeFizWorld.boxes[0].mesh.rotation.z = .3
-        threeFizWorld.spheres.forEach((sphere, idx) => {
-            sphere.position.set(
+        threeFizWorld.boxes[1].rotation.z = .3
+        threeFizWorld.boxes.forEach((box, idx) => {
+            box.position.set(
                 Math.random() * 50 - 10,
                 Math.random() * 50 - 10 + 100,
                 Math.random() * 50 - 10
             )
             })
+        threeFizWorld.boxes[1].position.set(0,0,0)
         scene.add(
             // new THREE.BoxHelper(threeFizWorld.boxes[0].collider, 0xffff00),
             light,
@@ -111,56 +110,61 @@
         document.body.appendChild( stats.domElement );
 
         const gui = new dat.GUI();
-        gui.add(threeFizWorld.boxes[0].position,"y",-50,50,.001).name('floor y');
-        gui.add(threeFizWorld.boxes[0].position,"x",-50,50,.001).name('floor x');
-        gui.add(threeFizWorld.boxes[0].rotation,'z',-Math.PI,Math.PI,.0001).name('floor rotate');
+        gui.add(threeFizWorld.boxes[1].position,"y",-50,50,.001).name('floor y');
+        gui.add(threeFizWorld.boxes[1].position,"x",-50,50,.001).name('floor x');
+        gui.add(threeFizWorld.boxes[1].rotation,'z',-Math.PI,Math.PI,.0001).name('floor rotate');
         document.body.appendChild(document.createElement("p"))
-        // document.body.appendChild(document.createElement("p"))
+        document.body.appendChild(document.createElement("p"))
 
 
         //scenario
 
-        function loopBall(){
-            threeFizWorld.spheres.forEach((sphere, idx) => {
-                if(sphere.position.y < -1000) {
-                    sphere.position.set(
+        function loopBox(){
+            threeFizWorld.boxes.forEach((box, idx) => {
+                if(box.position.y < -1000) {
+                    box.position.set(
                         Math.random() * 50 - 10,
                         11 * idx + 100,
                         Math.random() * 50 - 10
                     )
-                    sphere.velocity.set(0,0,0)
+                    box.velocity.set(0,0,0)
+                    box.rotationVelocity.set(0,0,0)
                 }
             })
         }
 
         controls.update();
         const loop = () =>{
-            // threeFizWorld.boxes[0].velocity.set(0,170,0)
+            document.getElementsByTagName("p")[0].innerHTML = `blue: 
+            x${threeFizWorld.boxes[0].collider.center.x.toFixed(2)} 
+            y${threeFizWorld.boxes[0].collider.center.y.toFixed(2)} 
+            z${threeFizWorld.boxes[0].collider.center.z.toFixed(2)}
+            <br>V: (
+                x${threeFizWorld.boxes[0].velocity.x.toFixed(2)} 
+                y${threeFizWorld.boxes[0].velocity.y.toFixed(2)} 
+                z${threeFizWorld.boxes[0].velocity.z.toFixed(2)}
+            )
+            <br>R: (
+                x${threeFizWorld.boxes[0].rotationVelocity.x.toFixed(2)} 
+                y${threeFizWorld.boxes[0].rotationVelocity.y.toFixed(2)} 
+                z${threeFizWorld.boxes[0].rotationVelocity.z.toFixed(2)}
+            )
+            `
+            document.getElementsByTagName("p")[1].innerHTML = `red: 
+            x${threeFizWorld.boxes[1].collider.center.x.toFixed(2)} 
+            y${threeFizWorld.boxes[1].collider.center.y.toFixed(2)} 
+            z${threeFizWorld.boxes[1].collider.center.z.toFixed(2)} 
+            <br>V: (
+                x${threeFizWorld.boxes[1].velocity.x.toFixed(2)} 
+                y${threeFizWorld.boxes[1].velocity.y.toFixed(2)} 
+                z${threeFizWorld.boxes[1].velocity.z.toFixed(2)}
+            )
+            `
             threeFizWorld.update()
-            // document.getElementsByTagName("p")[0].innerHTML = `blue: 
-            // x${threeFizWorld.spheres[0].collider.center.x.toFixed(2)} 
-            // y${threeFizWorld.spheres[0].collider.center.y.toFixed(2)} 
-            // z${threeFizWorld.spheres[0].collider.center.z.toFixed(2)}
-            // <br>V: (
-            //     x${threeFizWorld.spheres[0].velocity.x.toFixed(2)} 
-            //     y${threeFizWorld.spheres[0].velocity.y.toFixed(2)} 
-            //     z${threeFizWorld.spheres[0].velocity.z.toFixed(2)}
-            // )
-            // `
-            // document.getElementsByTagName("p")[1].innerHTML = `green: 
-            // x${threeFizWorld.spheres[1].collider.center.x.toFixed(2)} 
-            // y${threeFizWorld.spheres[1].collider.center.y.toFixed(2)} 
-            // z${threeFizWorld.spheres[1].collider.center.z.toFixed(2)} 
-            // <br>V: (
-            //     x${threeFizWorld.spheres[1].velocity.x.toFixed(2)} 
-            //     y${threeFizWorld.spheres[1].velocity.y.toFixed(2)} 
-            //     z${threeFizWorld.spheres[1].velocity.z.toFixed(2)}
-            // )
-            // `
             controls.update();
             stats.update();
             renderer.render(scene,camera);
-            loopBall()
+            loopBox()
             requestAnimationFrame(loop)
         };
         handleResize();
