new approach - need to find normal of collision

--- a/box_and_box_floor.html
+++ b/box_and_box_floor.html
@@ -85,7 +85,7 @@
         threeFizWorld.setWorld(threeFizWorld.boxes[1])
         threeFizWorld.init()
 
-        threeFizWorld.boxes[1].rotation.z = .3
+        // threeFizWorld.boxes[1].rotation.z = .1
         threeFizWorld.boxes.forEach((box, idx) => {
             box.position.set(
                 Math.random() * 50 - 10,
