--- a/box_and_box_floor.html
+++ b/box_and_box_floor.html
@@ -118,7 +118,9 @@
 
 
         //scenario
-        threeFizWorld.boxes[0].rotation.z = 0
+        threeFizWorld.boxes[0].rotation.z = Math.PI/4 + .1
+        // threeFizWorld.boxes[0].rotation.y = Math.PI/4
+        // threeFizWorld.boxes[0].rotation.x = Math.PI/4
         // threeFizWorld.boxes[0].rotation.y = -.9
 
         function loopBox(){
