--- a/box_and_box_floor.html
+++ b/box_and_box_floor.html
@@ -68,25 +68,33 @@
         let flGeo= new THREE.BoxGeometry(200,1,100);
         let flMat= new THREE.MeshPhongMaterial({color: 0xFF0000, wireframe: true});
         let boxGeo= new THREE.BoxGeometry(20,20,20);
-        let boxMat= new THREE.MeshPhongMaterial({color: 0x0000FF, wireframe: true});
+        let boxMat= new THREE.MeshPhongMaterial({color: 0x0000FF, wireframe: false});
 
         const light= new THREE.PointLight(0xFFFFFF,1);
         const helplight= new THREE.PointLightHelper(light);
 
         //Scene
         const threeFizWorld = new ThreeFiz(scene)
+        threeFizWorld.addBox({
+            mesh: new THREE.Mesh(flGeo,flMat),
+            mass:100,
+            restitutuion: .2,
+            isStatic: true
+            })
         // threeFizWorld.GRAVITY.set(0,-1,0)
-        let ilosc = 1
+        let ilosc = 2
         for(let i = 0; i< ilosc; i++){
-            threeFizWorld.addBox(new THREE.Mesh(boxGeo,boxMat), 100)
+            threeFizWorld.addBox({mesh:new THREE.Mesh(boxGeo,boxMat),
+            mass: 10,
+            restitutuion: .2})
         }
         // load('./models/bowl.glb')
         // load('./models/collision-world.glb')
-        threeFizWorld.addBox(new THREE.Mesh(flGeo,flMat), 10)
-        threeFizWorld.setWorld(threeFizWorld.boxes[1])
+        // threeFizWorld.setWorld(threeFizWorld.boxes[1])
+        let world = threeFizWorld.boxes[0]
         threeFizWorld.init()
 
-        // threeFizWorld.boxes[1].rotation.z = .1
+        // world.rotation.z = .1
         threeFizWorld.boxes.forEach((box, idx) => {
             box.position.set(
                 Math.random() * 50 - 10,
@@ -94,7 +102,7 @@
                 Math.random() * 50 - 10
             )
             })
-        threeFizWorld.boxes[1].position.set(0,0,0)
+        world.position.set(0,0,0)
         scene.add(
             // new THREE.BoxHelper(threeFizWorld.boxes[0].collider, 0xffff00),
             light,
@@ -111,27 +119,27 @@
         document.body.appendChild( stats.domElement );
 
         const gui = new dat.GUI();
-        gui.add(threeFizWorld.boxes[1].position,"y",-50,50,.001).name('floor y');
-        gui.add(threeFizWorld.boxes[1].position,"x",-50,50,.001).name('floor x');
-        gui.add(threeFizWorld.boxes[1].rotation,'z',-Math.PI,Math.PI,.0001).name('floor rotate z');
-        gui.add(threeFizWorld.boxes[1].rotation,'x',-Math.PI,Math.PI,.0001).name('floor rotate x');
+        gui.add(world.position,"y",-50,50,.001).name('floor y');
+        gui.add(world.position,"x",-50,50,.001).name('floor x');
+        gui.add(world.rotation,'z',-Math.PI,Math.PI,.0001).name('floor rotate z');
+        gui.add(world.rotation,'x',-Math.PI,Math.PI,.0001).name('floor rotate x');
         document.body.appendChild(document.createElement("p"))
         document.body.appendChild(document.createElement("p"))
 
 
         //scenario
-        threeFizWorld.boxes[0].rotation.z = .5 
-        threeFizWorld.boxes[0].rotation.y = .5
-        threeFizWorld.boxes[0].rotation.x = .5
+        // threeFizWorld.boxes[1].rotation.z = .5 
+        // threeFizWorld.boxes[1].rotation.y = .5
+        // threeFizWorld.boxes[1].rotation.x = .1
         // threeFizWorld.boxes[0].rotation.y = -.9
 
         function loopBox(){
             threeFizWorld.boxes.forEach((box, idx) => {
                 if(box.position.y < -1000) {
                     box.position.set(
-                        Math.random() * 50 - 10,
+                        0,
                         150,
-                        Math.random() * 50 - 10
+                        0
                     )
                     box.velocity.set(0,0,0)
                     box.rotationVelocity.set(0,0,0)
