--- a/box_box_collision.html
+++ b/box_box_collision.html
@@ -59,15 +59,15 @@
         //Scene
         const threeFizWorld = new ThreeFiz(scene)
 
-        threeFizWorld.addBox(new THREE.Mesh(boxGeo,boxMat), 10)
-        threeFizWorld.addBox(new THREE.Mesh(boxGeo2,boxMat2), 10)
+        threeFizWorld.addBox(new THREE.Mesh(boxGeo,boxMat), 100,)
+        threeFizWorld.addBox(new THREE.Mesh(boxGeo2,boxMat2), 100,  0.2, true)
         threeFizWorld.init()
 
         scene.add(
             light,
             helplight,
         );
-        camera.position.set(0,20,50);
+        camera.position.set(0,20,100);
         light.position.set(50,150,50);
 
         //Debug
@@ -85,12 +85,12 @@
         box1.add(threeFizWorld.boxes[0].position,"y",-50,50,.001)
         box1.add(threeFizWorld.boxes[0].mesh.rotation,'z',-Math.PI,Math.PI,.0001).name('r z');
 
-        box2.add(threeFizWorld.boxes[0].velocity,"x",-500,500,.01)
-        box2.add(threeFizWorld.boxes[0].velocity,"y",-500,500,.01)
-        box2.add(threeFizWorld.boxes[0].velocity,"z",-500,500,.01)
-        box2.add(threeFizWorld.boxes[0].rotation,'x',-Math.PI,Math.PI,.0001).name('r x');
-        box2.add(threeFizWorld.boxes[0].rotation,'y',-Math.PI,Math.PI,.0001).name('r y');
-        box2.add(threeFizWorld.boxes[0].rotation,'z',-Math.PI,Math.PI,.0001).name('r z');
+        box2.add(threeFizWorld.boxes[1].velocity,"x",-500,500,.01)
+        box2.add(threeFizWorld.boxes[1].velocity,"y",-500,500,.01)
+        box2.add(threeFizWorld.boxes[1].velocity,"z",-500,500,.01)
+        box2.add(threeFizWorld.boxes[1].rotation,'x',-Math.PI,Math.PI,.0001).name('r x');
+        box2.add(threeFizWorld.boxes[1].rotation,'y',-Math.PI,Math.PI,.0001).name('r y');
+        box2.add(threeFizWorld.boxes[1].rotation,'z',-Math.PI,Math.PI,.0001).name('r z');
         document.body.appendChild(document.createElement("p"))
         document.body.appendChild(document.createElement("p"))
 
@@ -98,30 +98,30 @@
         //scenario
 
         threeFizWorld.boxes[0].rotation.z = -.4
-        threeFizWorld.boxes[0].rotation.y = .3
+        // threeFizWorld.boxes[0].rotation.y = .3
         // threeFizWorld.boxes[0].rotation.x = Math.PI/4 -.1
         // threeFizWorld.boxes[1].rotation.z = Math.PI/4 + .400
         // threeFizWorld.boxes[1].rotation.y = Math.PI/4 - .450
 
-        threeFizWorld.boxes[0].position.set(100,45, 10)
+        threeFizWorld.boxes[0].position.set(0,45, 10)
         threeFizWorld.boxes[1].position.set(0,0,0)
 
-        threeFizWorld.boxes[0].velocity.set(-1500,-600,0)
+        threeFizWorld.boxes[0].velocity.set(0,0,0)
         threeFizWorld.boxes[0].rotationVelocity.set(0,0,0)
         // threeFizWorld.boxes[0].velocity.set(100,0,0)
         
         console.log(threeFizWorld.boxes[0])
         console.log(threeFizWorld.boxes[1])
-        threeFizWorld.GRAVITY.set(0,0,0)
+        threeFizWorld.GRAVITY.set(0,-5,0)
         function loopSimulation(){
             let box1 = threeFizWorld.boxes[0].position
             let box2 = threeFizWorld.boxes[1].position
             if(Math.abs(box1.x) > 200 || Math.abs(box1.y) > 200 || Math.abs(box1.z) > 200 ||
                Math.abs(box2.x) > 200 || Math.abs(box2.x) > 200 || Math.abs(box2.x) > 200){
-                threeFizWorld.boxes[0].position.set(50,20,0)
+                threeFizWorld.boxes[0].position.set(0,45, 0)
                 threeFizWorld.boxes[1].position.set(0,0,0)
 
-                threeFizWorld.boxes[0].velocity.set(-1500,-600,0)
+                threeFizWorld.boxes[0].velocity.set(0,0,0)
                 threeFizWorld.boxes[0].rotationVelocity.set(0,0,0)
                 threeFizWorld.boxes[1].velocity.set(0,0,0)
                 threeFizWorld.boxes[1].rotationVelocity.set(0,0,0)
