--- a/box_and_box_floor.html
+++ b/box_and_box_floor.html
@@ -92,8 +92,8 @@
         let world = threeFizWorld.boxes[0]
         let grabber = new Grabber({
             renderer: renderer, 
-            SCENE: scene, 
-            CAMERA: camera, 
+            scene: scene, 
+            camera: camera, 
             cameraControls: controls,
             objectsToGrab: [
             threeFizWorld.boxes[1],
