--- a/sphere_gravity.html
+++ b/sphere_gravity.html
@@ -75,8 +75,8 @@
         }
         let grabber = new Grabber({
             renderer: renderer, 
-            SCENE: scene, 
-            CAMERA: camera, 
+            scene: scene, 
+            camera: camera, 
             cameraControls: controls,
             objectsToGrab: [
                 threeFizWorld.spheres[0],
