new demos and fixes

--- a/box_and_box_floor.html
+++ b/box_and_box_floor.html
@@ -135,8 +135,8 @@
 
 
         //scenario
-        // threeFizWorld.boxes[1].rotation.z = .5 
-        // threeFizWorld.boxes[1].rotation.y = .5
+        threeFizWorld.boxes[0].rotation.z = .5 
+        threeFizWorld.boxes[0].rotation.y = .5
         // threeFizWorld.boxes[1].rotation.x = .1
         // threeFizWorld.boxes[0].rotation.y = -.9
 
