--- a/box_box_collision.html
+++ b/box_box_collision.html
@@ -109,9 +109,7 @@
         threeFizWorld.boxes[0].rotationVelocity.set(0,0,0)
         // threeFizWorld.boxes[0].velocity.set(100,0,0)
         
-        console.log(threeFizWorld.boxes[0])
-        console.log(threeFizWorld.boxes[1])
-        threeFizWorld.GRAVITY.set(0,-5,0)
+        threeFizWorld.GRAVITY.set(0,0,0)
         function loopSimulation(){
             let box1 = threeFizWorld.boxes[0].position
             let box2 = threeFizWorld.boxes[1].position
