--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     </style>
 </head>
     <body>
-        Hello world
+        <a href="spheres.html">Spheres</a>
+        <a href="boxes.html">Boxes</a>
+        <a href="sphere_and_box.html">Sphere & box</a>
+        <a href="box_and_box_floor.html">Box & floor</a>
+        <a href="objects_and_box_floor.html">Objects & floor</a>
+        <a href="sphere_gravity.html">Radial Gravity</a>
+        <a href="cannon.html">Cannon</a>
     </body>
 </html>
