--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     </style>
 </head>
     <body>
-        <a href="spheres.html">Spheres</a>
-        <a href="boxes.html">Boxes</a>
-        <a href="sphere_and_box.html">Sphere & box</a>
-        <a href="box_and_box_floor.html">Box & floor</a>
-        <a href="objects_and_box_floor.html">Objects & floor</a>
-        <a href="sphere_gravity.html">Radial Gravity</a>
-        <a href="cannon.html">Cannon</a>
+        <a href="spheres.html">Spheres</a><br>
+        <a href="boxes.html">Boxes</a><br>
+        <a href="sphere_and_box.html">Sphere & box</a><br>
+        <a href="box_and_box_floor.html">Box & floor</a><br>
+        <a href="objects_and_box_floor.html">Objects & floor</a><br>
+        <a href="container.html">Container</a><br>
+        <a href="sphere_gravity.html">Radial Gravity</a><br>
+        <a href="cannon.html">Cannon</a><br>
     </body>
 </html>
