--- a/sphere_gravity.html
+++ b/sphere_gravity.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+    <span style="position: absolute; left: 50%"> click & hold - grabbing</span>
 	<script type="importmap">
         {
             "imports": {
