--- a/cannon.html
+++ b/cannon.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+    <span style="position: absolute; left: 50%"> click - shoot</span>
 	<script type="importmap">
         {
             "imports": {
